$Id: History,v 1.2 2002-04-08 08:59:13 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

April 8th, 2002  M.Dressel - exbiasing-V04-00-02
- Resolved compilation problems on HP-aCC.

April 4th, 2002  M.Dressel - exbiasing-V04-00-01
- Resolved compilation problems on SUN-CC and Linux-egcs.

March 28th, 2002  M.Dressel - exbiasing-V04-00-00
- First implementation of importance biasing and scoring user examples.

March 25th, 2002  G.Cosmo
- Created.